crates/keron-lang/tests/corpus/errors/check/union_assignment_with_unknown_variant.keron
type Color = "red" | "green" | "blue"
val c: Color = "yellow"
